--- a/md/11.md
+++ b/md/11.md
@@ -9,17 +9,17 @@ El tipo de dato texto, también llamado cadena o string, es fundamental en los p
 Efectivamente, para el ordenador, un texto es como una lista. Una lista o cadena de letras, y la podemos tratar como tal:
 
 ```Python
-texto = "Hola soy Ada"
-texto[1] # "o"
+testua = "Kaixo Ada naiz"
+testua[1] # "a"
 ```
 
 Incluso podemos recorrer el texto como si fuera una lista:
 
 ```Python
-texto = "Ada"
+testua = "Ada"
 
-for caracter in texto:
-    print(caracter)
+for hizkia in testua:
+    print(hizkia)
 ```
 
 La salida sería:
@@ -33,36 +33,36 @@ a
 También podemos saber la longitud de un texto con la función len():
 
 ```Python
-texto = "Neko maulla"
-len(texto)  # 11
+testua = "Neko miauka"
+len(testua)  # 11
 ```
 
 Pero si duda, lo más interesante es que podemos extraer la parte que queramos del texto indicando el inicio y el final:
 
 ```Python
-texto = "Python mola"
-texto[0:6]  # "Python"
-texto[7:12]  # "mola"
+testua = "Python ona da"
+testua[0:6]  # "Python"
+testua[7:12]  # "ona da"
 ```
 
 También se pueden sacar los primeros caracteres
 
 ```Python
-texto = "Python mola"
-texto[:6] # "Python"
+testua = "Python ona da"
+testua[0:6]  # "Python"
 ```
 
 O los últimos caracteres
 
 ```Python
-texto = "Python mola"
-texto[-4:] # "mola"
+testua = "Python ona da"
+testua[-5]  # "oan da"
 ```
 
 O simplemente el último de todos:
 
 ```Python
-texto = "Python mola"
+testua = "Python ona da"
 texto[-1] # "a"
 ```
 
@@ -72,16 +72,16 @@ texto[-1] # "a"
 Tenemos una serie de funciones para convertir texto a mayúsculas o minúsculas:
 
 ```Python
-texto = "Profesora Ada"
-texto.upper() # PROFESORA ADA
-texto.lower() # Profesora Ada
+testua = "Ada irakaslea"
+testua.upper() # ADA IRAKASLEA
+testua.lower() # aaa irakaslea
 ```
 
 También tenemos una función llamada `title()`, la cual cambia cada palabra dentro de un texto, poniendo la primera letra en mayúsculas.
 
 ```Python
-texto = "esto es una frase"
-texto.title() # Esto Es Una Frase
+testua = "hau esaldi bat da"
+texto.title() # Hau esaldi bat da
 ```
 
 11.3 split: de texto a lista
@@ -90,15 +90,15 @@ texto.title() # Esto Es Una Frase
 `split` es una interesante función que parte un texto en cachos y lo convierte en una lista:
 
 ```Python
-texto = "ven conmigo si quieres vivir"
-palabras = texto.split() # ["ven", "conmigo", "si", "quieres", "vivir"]
+testua = "zatoz nirekin bizi nahi baduzu"
+palabras = testua.split() # ["zatoz", "nirekin", "bizi", "nahi", "baduzu"]
 ```
 
 Por defecto el corte del split se hace en los espacios del texto. Pero se puede indicar cualquier otro separador, por ejemplo el punto y coma `;`:
 
 ```Python
-texto = "Ada;Neko;Bug"
-nombres = texto.split(";") # ["Ada", "Neko", "Bug" ]
+testua = "Ada;Neko;Bug"
+izenak = testua.split(";") # ["Ada", "Neko", "Bug" ]
 ```
 
 11.4 Búsquedas
@@ -107,26 +107,26 @@ nombres = texto.split(";") # ["Ada", "Neko", "Bug" ]
 En ocasiones nos interesará buscar una palabra dentro de un texto. Para eso podemos usar la función find. En caso de encontrar la palabra, muestra la posición en la que se empieza esa palabra. Si no lo encuentra, devuelve `-1`.
 
 ```Python
-palabras = "La mejor profesora es Ada, sin duda"
-encontrado = palabras.find("mejor")  # 3
-encontrado = palabras.find("Ada")  # 22
-noEncontrado = palabras.find("xxx")  # -1
+hitzak = "Irakaslerik onena Ada da"
+aurkitua = hitzak.find("onena")  # 12
+aurkitua = hitzak.find("Ada")  # 18
+ezAurikitua = hitzak.find("xxx")  # -1
 ```
 
 Si queremos saber si un texto empieza de alguna manera, se puede usar startswith()
 
 ```Python
-palabras = "Python es un buen lenguaje"
-empieza = palabras.startswith("Py") # True
-empieza = palabras.startswith("es") # False
+hitzak = "Python lengoai ona da"
+hasiera = hitzak.startswith("Py") # True
+hasiera = hitzak.startswith("ja") # False
 ```
 
 Mientras que si queremos saber si un texto acaba de una manera, se puede usar endswith():
 
 ```Python
-palabras = "Python es un buen lenguaje"
-acaba = palabras.endswith("aje") # True
-acaba = palabras.startswith("ajes") # False
+hitzak = "Python lengoai ona da"
+amaiera = hitzak.endswith("da") # True
+amaiera = hitzak.startswith("thon") # False
 ```
 
 11.5 Eliminar sobrantes
@@ -137,36 +137,36 @@ Los textos pueden empezar o terminar con espacios en blanco u otros caracteres q
 Con `lstrip()` se eliminan los espacios al inicio del texto:
 
 ```Python
-texto = "  Tengo espacios      "
-limpio = texto.lstrip() # "Tengo espacios      "
+testua = "  Hutsuneak dauzkat      "
+garbia = testua.lstrip() # "Hutsuneak dauzkat      "
 ```
 
 Con `rstrip()` se eliminan los espacios al inicio del texto:
 
 ```Python
-texto = "  Tengo espacios      "
-limpio = texto.rstrip()  # "  Tengo espacios"
+testua = "  Hutsuneak dauzkat      "
+garbia = testua.rstrip()  # "  Hutsuneak dauzkat"
 ```
 
 Y con `strip()` quitamos los espacios de ambos lados:
 
 ```Python
-texto = "  Tengo espacios      "
-limpio = texto.strip()  # "Tengo espacios"
+testua = "  Hutsuneak dauzkats     "
+garbia = testua.strip()  # "Hutsuneak dauzkat"
 ```
 
 Por defecto se quitan espacios, pero podemos indicar cualquier texto que queramos quitar:
 
 ```Python
-texto = "--Texto con guión"
-limpio = texto.lstrip("-") # "Texto con guión"
+testua = "--Testua gidoiekin"
+limpio = testua.lstrip("-") # "Testua gidoiekin"
 ```
 
 También los saltos de línea cuando leemos texto desde un fichero o desde la consola:
 
 ```Python
-texto = "Esto tiene un salto de línean"
-limpio = texto.rstrip("n")
+testua = "Honek lerro jauzia dauka\n"
+limpio = testua.rstrip("\n")
 ```
 
 11.6 Ejercicios propuestos
@@ -177,13 +177,13 @@ limpio = texto.rstrip("n")
 Escribe un programa que inicie una lista de 5 números (iniciados a 0), otro de 5 nombres iniciados a mano y otro de valores 5 booleanos (iniciados a false)
 
 ```Python
-nombres = ["Frodo", "Sam", "Merrin", "Pippin"]
-booleanos = [True]*5
-numeros = [0]*5
+izenak = ["Frodo", "Sam", "Merrin", "Pippin"]
+logikoak = [True]*5
+zenbakiak = [0]*5
 
-print(nombres)
-print(numeros)
-print(booleanos)
+print(izenak)
+print(zenbakiak)
+print(logikoak)
 ```
 
 Resultado:
@@ -199,13 +199,13 @@ Resultado:
 Escribe un programa que defina una lista de 10 números. Luego debe crear un bucle que en las posiciones pares meta un 0.
 
 ```Python
-numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
-for i in range(len(numeros)):
-    if i % 2 == 0:
-        numeros[i] = 0
+for i in range(len(zenbakiak)):
+    if i % 2 == 0:
+        zenbakiak[i] = 0
 
-print(numeros)
+print(zenbakiak)
 ```
 
 Resultado:
@@ -219,38 +219,38 @@ Resultado:
 Escribe un programa para gestionar una lista, que muestre al usuario un menú con 4 opciones: (1) meter elemento, (2) eliminar, (3) mostrar y (4) salir. El menú debe mostrarse mientras el usuario no meta la opción 4. Si elige la opción 1, se hace push de un valor cualquiera, si elige 2 se hace pop, si elige 3 se muestra el contenido dla lista.
 
 ```Python
-numeros = []
-opcion = -1
+zenbakiak = []
+aukera = -1
 
-while opcion != "4":
-    print("Elige opción")
-    print("1. Meter elemento.")
-    print("2. Sacar elemento.")
-    print("3. Mostrar lista.")
-    print("4. Salir.")
-    opcion = input("Elige opción: ")
+while aukera != "4":
+    print("Aukeratu")
+    print("1. Elementua sartu.")
+    print("2. Elementua kendu.")
+    print("3. Arraia erakutsi.")
+    print("4. Irten.")
+    aukera = input("Sartu aukera: ")
 
-    if "1":
-        numeros.append(0)
-    elif "2":
-        numeros.pop()
-    elif "3":
-        print(numeros)
-    elif "4":
-        print("Hasta otra")
-    else:
-        print("Opción desconocida")
+    if "1":
+        zenbakiak.append(0)
+    elif "2":
+        zenbakiak.pop()
+    elif "3":
+        print(zenbakiak)
+    elif "4":
+        print("Agurra")
+    else:
+        print("Aukera ezezaguna")
 ```
 
 Resultado:
 
 ```console
-Elige opción
-1. Meter elemento.
-2. Sacar elemento.
-3. Mostrar lista.
-4. Salir.
-Elige opción: 3
+Aukeratu
+1. Elementua sartu.
+2. Elementua kendu.
+3. Arraia erakutsi.
+4. Irten.
+Sartu aukera: 3
 []
 ```
 
@@ -259,26 +259,26 @@ Elige opción: 3
 Escribe un programa que solicite palabras al usuario y las vaya concatenando para construir una frase, hasta que el usuario escriba un punto (.). Entonces el programa deberá mostrar la frase creada. Si el usuario no escribe nada, no se debe concatenar nada.
 
 ```Python
-frase = ""
-palabra = ""
+izenburua = ""
+hitza = ""
 
-while palabra != ".":
-    palabra = input("Escribe una palabra: ")
+while hitza != ".":
+    hitza = input("Idatzi hitz bat: ")
+    
+    if hitza != "." or hitza != "":
+        izenburua = izenburua + " " + hitza
 
-    if palabra != "." or palabra != "":
-        frase = frase + " " + palabra
-
-print("Frase creada:", frase)
+print("Sortutako esaldi:", izenburua)
 ```
 
 Resultado:
 
 ```console
-Escribe una palabra: Hola
-Escribe una palabra: qué
-Escribe una palabra: tal
-Escribe una palabra: .
-Hola qué tal
+Idatzi hitz bat: Kaixo
+Idatzi hitz bat: zer
+Idatzi hitz bat: moduz
+Idatzi hitz bat: .
+Kaixo zer moduz
 ```
 
 ### 11.6.5 Ejercicio3.4
@@ -286,22 +286,22 @@ Hola qué tal
 Escribe un programa que solicite al usuario su nombre, su lugar de nacimiento y su año de nacimiento. Luego debe mostrar una frase con toda esa información utilizando la interpolación o plantillas de cadenas.
 
 ```Python
-nombre = input("Escribe tu nombre: ")
-lugar = input("Escribe tu lugar de nacimiento: ")
-fecha = input("Escribe tu año de nacimiento: ")
+izen = input("Idatzi zure izena: ")
+jaiotegia = input("Idatzi jaiotze lekua: ")
+urtea = input("Idatzi jaiotze urtea: ")
 
-mensaje = f"Te llamas {nombre} naciste en {lugar} en {fecha}"
+mezua = f"{izen} izena duzu, {jaiotegia}n jaio zinen {urtea} urtean"
 
-print(mensaje)
+print(mezua)
 ```
 
 Resultado:
 
 ```console
-Escribe tu nombre: Ada
-Escribe tu lugar de nacimiento: Teverga
-Escribe tu año de nacimiento: 2006
-Te llamas Ada naciste en Teverga en 2006
+Idatzi zure izena: Ada
+Idatzi jaiotze lekua: Teverga
+Idatzi jaiotze urtea: 2006
+Ada izena duzu Tevergan jaio zinen 2006 urtean
 ```
 
 ### 11.6.6 Ejercicio3.5
@@ -309,27 +309,27 @@ Te llamas Ada naciste en Teverga en 2006
 Escribe un programa que solicite al usuario una frase. Luego debe solicitar una palabra de esa frase, y como resultado, el programa devolverá la misma frase con esa palabra en mayúsculas:
 
 ```Python
-frase = input("Escribe una frase: ")
-palabra = input("Escribe una palabra de esa frase: ")
+frasea = input("Idatzi esaldi bat: ")
+hitza = input("Idatzi esalditik hitz bat: ")
 
-posicion = frase.index(palabra)
+posizioa = frasea.index(hitza)
 
-if posicion != -1:
-    inicio = frase[0:posicion]
-    final = frase[posicion + len(palabra):len(frase)]
-    resultado = f"{inicio}{palabra.upper()}{final}"
+if posizioa != -1:
+    hasiera = frasea[0:posizioa]
+    bukaera = frasea[posizioa + len(hitza):len(frasea)]
+    emaitza = f"{hasiera}{hitza.upper()}{bukaera}"
 
-    print(resultado)
+    print(emaitza)
 else:
-    print(palabra, "no está en la frase.")
+    print(hitza, "ez dago esaldian.")
 ```
 
 Resultado:
 
 ```console
-Escribe una frase: Qué buena es la profa Ada
-Escribe una palabra de esa frase: buena
-Qué BUENA es la profa Ada
+Idatzi esaldi bat: Ada irakasle oso ona da
+Escribe una palabra de esa frase: ona
+Ada irakasle oso ONA da
 ```
 
 ### 11.6.7 Ejercicio3.6
@@ -337,14 +337,14 @@ Qué BUENA es la profa Ada
 Crea un programa que defina una lista de 5 nombres y luego utilice un bucle para mostrar los nombres de uno en uno.
 
 ```Python
-nombres = ["Frodo", "Merrin", "Sam", "Pip", "Bilbo"]
+izenak = ["Frodo", "Merrin", "Sam", "Pip", "Bilbo"]
 
-for nombre in nombres:
-    print(nombre)
+for izena in izenak:
+    print(izena)
 
-# variante:
-for i in range(len(nombres)):
-    print(nombres[i])
+# alda-eredu bat:
+for i in range(len(izenak)):
+    print(izenak[i])
 ```
 
 Resultado:
@@ -362,15 +362,20 @@ Bilbo
 Crea un programa que defina una lista de 10 números enteros. Luego crea otro bucle que calcule que incremente en uno cada uno de los elementos y los muestre.
 
 ```Python
-numeros = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
+zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
 
-for i in range(len(numeros)):
-    numeros[i] = numeros[i] + 1
+for zenbakia in zenbakiak:
+    print(zenbakia)
 
-print(numeros)
+for i in range(len(zenbakiak)):
+    zenbakiak[i] = zenbakiak[i] + 1
 
-# Alternativa para la suma:
-# numerosIncrementados = numeros.map( numero => numero + 1 )
+for zenbakia in zenbakiak:
+    print(zenbakia)
+
+
+# Gehiketarako alternatiba:
+# zenbakiakGehitu = zenbakiak.map( zenbakia => zenbakia + 1 )
 ```
 
 Resultado:
@@ -384,29 +389,29 @@ Resultado:
 Crea un programa que defina una lista de 10 números enteros Luego crea un bucle que determine si en la lista hay algún elemento repetido. Con que encuentre uno repetido es suficiente.
 
 ```Python
-numeros = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
-repetido = False
+numeruak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
+errepikatua = False
 i = 0
 j = 0
 
-while i < len(numeros) and not repetido:
-    while j < len(numeros):
-        if numeros[i] == numeros[j]:
-            repetido = True
-            break
-        j = j + 1
-    i = i + 1
+while i < len(numeruak) and not errepikatua:
+    while j < len(numeruak):
+        if numeruak[i] == numeruak[j]:
+            errepikatua = True
+            break
+        j = j + 1
+    i = i + 1
 
-if repetido:
-    print("Hay un número repetido")
+if errepikatua:
+    print("Zenbaki bat errepikatuta dago")
 else:
-    print("No hay un número repetido")
+    print("Ez dago zenbaki errepikaturik")
 ```
 
 Resultado:
 
 ```console
-Hay un número repetido
+Zenbaki bat errepikatuta dago
 ```
 
 ### 11.6.10                  Ejercicio 3.9
@@ -414,31 +419,31 @@ Hay un número repetido
 Crea un programa que defina una lista iniciado con 10 números enteros. Luego crea otro bucle que contabilice el total de números positivos, negativos y los que sean 0.
 
 ```Python
-numeros = [3, 5, -4, 2, 1, 4, 0, 6, -9, 8, 3]
+zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, -9, 8, 3]
 
-positivos = 0
-negativos = 0
-ceros = 0
+positiboak = 0
+negatiboak = 0
+hutsak = 0
 
-for numero in numeros:
-    if numero > 0:
-        positivos = positivos + 1
-    elif numero < 0:
-        negativos = negativos + 1
-    else:
-        ceros = ceros + 1
+for zenbakia in zenbakiak:
+    if zenbakia > 0:
+        positiboak = positiboak + 1
+    elif zenbakia < 0:
+        negatiboak = negatiboak + 1
+    else:
+        hutsak = hutsak + 1
 
-print("Positivos: ", positivos)
-print("Negativos: ", negativos)
-print("Ceros: ", ceros)
+print("Positiboak: ", positiboak)
+print("Negatiboak: ", negatiboak)
+print("Hutsak: ", hutsak)
 ```
 
 Resultado:
 
 ```console
-Positivos:  8
-Negativos:  2
-Ceros:  1
+Positiboak:  8
+Negatiboak:  2
+Hutsak:  1
 ```
 
 ### 11.6.11                  Ejercicio 3.10
@@ -456,21 +461,21 @@ Después de eso crea otro bucle que si encuentra el número 15 en algún element
 ```Python
 import random
 
-matriz = [([0] * 10)] * 5
+matrizea = [([0] * 10)] * 5
 
-print(matriz)
+print(matrizea)
 
-for i in range(len(matriz)):
-    random.seed()
-    for j in range(len(matriz[i])):
-        matriz[i][j] = random.randint(0, 30)
+for i in range(len(matrizea)):
+    random.seed()
+    for j in range(len(matrizea[i])):
+        matrizea[i][j] = random.randint(0, 30)
 
-print(matriz)
+print(matrizea)
 
-for i in range(len(matriz)):
-    for j in range(len(matriz[i])):
-        if matriz[i][j] == 15:
-            print("Encontrado 15 en ", i, )
+for i in range(len(matrizea)):
+    for j in range(len(matrizea[i])):
+        if matrizea[i][j] == 15:
+            print("15 aurkitu da ", i, )
 ```
 
 ### 11.6.12                  Ejercicio 3.11
@@ -480,17 +485,17 @@ Crea un programa que defina una lista iniciado con 10 números enteros. En un bu
 ```Python
 import random
 
-numeros = [4, 7, -3, 7, 1, 11, 9, 0, 5, 8]
+zenbakiak = [4, 7, -3, 7, 1, 11, 9, 0, 5, 8]
 
-print(numeros)
+print(zenbakiak)
 
-for i in range(len(numeros)):
-    indiceAleatorio = random.randint(0, len(numeros) - 1)
-    anterior = numeros[i]
-    numeros[i] = numeros[indiceAleatorio]
-    numeros[indiceAleatorio] = anterior
+for i in range(len(zenbakiak)):
+    aleatorio_indizea = random.randint(0, len(zenbakiak) - 1)
+    aurrekoa = zenbakiak[i]
+    zenbakiak[i] = zenbakiak[aleatorio_indizea]
+    zenbakiak[aleatorio_indizea] = aurrekoa
 
-print(numeros)
+print(zenbakiak)
 ```
 
 Resultado:
