--- a/md/12.md
+++ b/md/12.md
@@ -9,8 +9,8 @@
 Las funciones son pequeños programas dentro de los programas. Esta sería una función que simplemente saca un saludo por pantalla:
 
 ```Python
-def saludo ():
-    print "Hola"
+def agurtu ():
+    print "Kaixo"
 ```
 
 Como se puede ver, una función se define utilizando la palabra def seguida del nombre de la función, en este caso saludo y la lista de parámetros (), la cual está vacía en este caso. En el cuerpo de la función, podemos poner las instrucciones que queramos.
@@ -20,13 +20,13 @@ Y siguiendo con el estilo de Python, observa que el código que va dentro de la 
 Una vez definida esa función, cada vez que la utilicemos se ejecutará el código que hay en ella:
 
 ```Python
-saludo()
+agurtu()
 ```
 
 Lo cual mostrará:
 
 ```console
-Hola
+Kaixo
 ```
 
 ### 12.1.1 Ejercicio4.0
@@ -34,26 +34,26 @@ Hola
 Escribe un programa con tres funciones llamadas días, tardes y noches. Cada una debe mostrar un saludo distinto, "Buenos días", "Buenas tardes" y "Buenas noches" respectivamente. Añade las llamadas de a las tres funciones.
 
 ```Python
-def dias ():
-    print("Buenos días")
+def egunak ():
+    print("Egun on")
 
-def tardes ():
-    print("Buenos tardes")
+def arratsaldeak ():
+    print("Arratsalde on")
 
-def noches ():
-    print("Buenos noches")
+def gauekoak ():
+    print("Gabon")
 
-dias()
-tardes()
-noches()
+egunak()
+arratsaldeak()
+gauekoak()
 ```
 
 Resultado:
 
 ```console
-Buenos días
-Buenos tardes
-Buenos noches
+Egun on
+Arratsalde on
+Gabon
 ```
 
 12.2 Parámetros
@@ -64,22 +64,22 @@ Las funciones pueden recibir parámetros. Estos se convierten en variables dentr
 Por ejemplo, podemos crear una función que salude a alguien:
 
 ```Python
-def saluda(persona):
-    print("Hola", persona)
+def agurtu(pertsona):
+    print("Kaixo", pertsona)
 ```
 
 Dentro de la función, el valor de persona será distinto según lo que se le pase en la llamada Se podría usar así:
 
 ```Python
-saluda("Neko")  # persona será "Neko"
-saluda("Ada")   # persona será "Ada"
+agurtu("Neko")  # pertsona "Neko" izango da
+agurtu("Ada")   # pertsona "Ada" izango da
 ```
 
 Lo que resultaría en:
 
 ```console
-Hola Neko
-Hola Ada
+Kaixo Neko
+Kaixo Ada
 ```
 
 ### 12.2.1 Ejercicio4.1
@@ -87,11 +87,10 @@ Hola Ada
 Escribe un programa con una función llamada cuadrado que tenga un parámetro a. La función debe multiplicar a * a y mostrar el resultado por pantalla.
 
 ```Python
-def cuadrado (a):
-    print(a * a)
+def karratua(a):
+    print(a * a)
 
-
-cuadrado(3)
+karratua(3)
 ```
 
 Resultado:
@@ -105,36 +104,36 @@ Resultado:
 Los parámetros de una función pueden tener un valor por defecto. Es decir, se les puede asignar un valor concreto y si no se pasa ese parámetro en la llamada, el parámetro tomará ese valor por defecto.
 
 ```Python
-def saluda(persona, veces = 3):
-    for i in range(veces):
-        print("Hola", persona)
+def agurtu(pertsona, zanbat = 3):
+    for i in range(zanbat):
+        print("Kaixo", pertsona)
 ```
 
 Si se le llama con:
 
 ```Python
-saluda("Neko", 2)
+agurtu("Neko", 2)
 ```
 
 Se vería:
 
 ```console
-Hola Neko
-Hola Neko
+Kaixo Neko
+Kaixo Neko
 ```
 
 En cambio, si no pasamos el segundo parámetro, vecestomará el valor por defecto 3:
 
 ```Python
-saluda("Bug")
+agurtu("Bug")
 ```
 
 Sería:
 
 ```console
-Hola Bug
-Hola Bug
-Hola Bug
+Kaixo Bug
+Kaixo Bug
+Kaixo Bug
 ```
 
 
@@ -143,13 +142,13 @@ Hola Bug
 Las funciones en Python permiten que les pases un número indeterminado de parámetros. Suena un poco raro, pero resulta útil. Imagina que quieres crear una función que sume los todos parámetros que le pases.
 
 ```Python
-def sumar(*valores):
-    resultado = 0
+def batuketa(*balioak):
+    emaitza = 0
 
-    for valor in valores:
-        resultado = resultado + valor
+    for balioa in balioak:
+        emaitza = emaitza + balioa
    
-    return resultado
+    return emaitza
 ```
 
 Si te fijas, hemos definido el parámetro valores con un * por delante. Con eso le estamos indicando que no se trata de un único parámetro, sino una lista que puede tener cualquier longitud.
@@ -157,8 +156,8 @@ Si te fijas, hemos definido el parámetro valores con un * por delante. Con eso 
 Por tanto, a esa función la podemos llamar así:
 
 ```Python
-sumar(3, 4, 5) # 12
-sumar(2, 45)   # 47
+batuketa(3, 4, 5) # 12
+batuketa(2, 45)   # 47
 ```
 
 
@@ -167,22 +166,22 @@ sumar(2, 45)   # 47
 Escribe un programa con una función llamada unir que reciba parámetros indefinidos o dinámicos. La función unir debe tomar los parámetros y retornar un texto con todos ellos formando una frase.
 
 ```Python
-def unir(*palabras):
-    frase = ""
+def elkartu(*hitzak):
+    esaldia = ""
 
-    for palabra in palabras:
-        frase = frase + " " + palabra
+    for hitza in hitzak:
+        esaldia = esaldia + " " + hitza
    
-    return frase
+    return esaldia
 
 
-print(unir("Hola", "qué", "tal"))
+print(unir("Kaixo", "zer", "moduz"))
 ```
 
 Resultado:
 
 ```console
-Hola qué tal
+Kaixo zer moduz
 ```
 
 
@@ -196,23 +195,23 @@ Para eso se utiliza la instrucción return, la cual solo puede devolver un dato 
 Por ejemplo, una función que calcule la suma de dos valores:
 
 ```Python
-def suma(a, b):
-    resultado = a + b
-    return resultado
+def batu(a, b):
+    emaitza = a + b
+    return emaitza
 ```
 
 
 Se puede abreviar un poco haciendo directamente:
 
 ```Python
-def suma(a, b):
+def batu(a, b):
     return a + b
 ```
 
 Se podría usar la función así:
 
 ```Python
-print(suma(40, 2))  # 42
+print(batu(40, 2))  # 42
 ```
 
 Debes tener en cuenta un par de cosas con el return:
@@ -226,11 +225,10 @@ Debes tener en cuenta un par de cosas con el return:
 Escribe un programa con una función llamada dividir que reciba los parámetros a y b. La función debe retornar la división entre los dos números.
 
 ```Python
-def dividir (a, b):
-    return a / b
+def zatitu(a, b):
+    return a / b
 
-
-print(dividir(32, 4))
+print(zatitu(3))
 ```
 
 Resultado:
@@ -242,15 +240,15 @@ Resultado:
 Otro ejemplo, una función que multiplique un valor varias veces. Si el número de veces es menor que 1 devolverá un 0:
 
 ```Python
-def multiplica(numero, veces):
-    if (veces > 0):
-        total = 1
+def biderkatu(zenbakia, zenbat):
+    if (zenbat > 0):
+        guztira = 1
         for i in range(veces):
-            total = total * numero
+            guztira = guztira * zenbakia
     else:
         return 0
 
-multiplica(2, 3) # 8
+biderkatu(2, 3) # 8
 ```
 
 Nota:
@@ -258,12 +256,12 @@ Nota:
 La función anterior queda más clara así.
 
 ```Python
-def multiplica(numero, veces):
-    if (veces < 1): return 0
+def biderkatu(zenbakia, zenbat):
+    if (zenbat < 1): return 0
 
-    total = 1
-    for i in range(veces):
-        total = total * numero
+    guztira = 1
+    for i in range(zenbat):
+        guztira = guztira * zenbakia
 ```
 
 12.4 Llamadas anidadas
@@ -272,22 +270,22 @@ def multiplica(numero, veces):
 No tengas miedo a anidar las llamadas de funciones. Es algo muy natural en programación. Imagina que tenemos esta función que se encarga de solicitar un número al usuario y devuelve el ńumero introducido:
 
 ```Python
-def leeNumero():
-    numero = input("Escribe número: ")
-    return int(numero)
+def irakurriZenbakia():
+    zenbakia = input("Idatzi zenbakia: ")
+    return int(zenbakia)
 ```
 
 Supongamos que también tenemos otra función para restar números:
 
 ```Python
-def restar (a, b)
+def kenketa (a, b)
     return a - b
 ```
 
 Si queremos hacer un programa que solicite dos números al usuario y los reste podríamos hacerlo así:
 
 ```Python
-print(restar(leeNumero(), leeNumero()))
+print(kenketa(irakurriZenbakia(), irakurriZenbakia()))
 ```
 
 En lugar de poner un número o una variable como parámetro, podemos poner una llamada a una función.
@@ -295,13 +293,13 @@ En lugar de poner un número o una variable como parámetro, podemos poner una l
 Esas funciones leeNumero(), devolverán algún valor. En cuanto se llame al primer leeNumero() será como tener:
 
 ```Python
-print(restar(5, leeNumero()))
+print(kenketa(5, irakurriZenbakia()))
 ```
 
 Y luego tras llamar al segundo leeNumero() :
 
 ```Python
-print(restar(5, 2)
+print(kenketa(5, 2)
 ```
 
 Luego se llamará a restar y devolverá un valor:
@@ -321,19 +319,19 @@ Y finalmente se llamará a print y veremos el resultado:
 Escribe dos funciones. Una que reciba un número y devuelva el mismo número en positivo.
 
 ```Python
-def positivo(valor)
+def positibo(valor)
 ```
 
 Y otra función que reciba dos números y calcule la potencia entre ellos.
 
 ```Python
-def potencia(balio1, balio2)
+def berredura(balio1, balio2)
 ```
 
 Debes llamar a la segunda función pasando como parámetros:
 
 ```Python
-potencia(positivo(-5), positivo(4))
+berredura(positibo(-5), positibo(4))
 ```
 
 Nota:
@@ -341,21 +339,21 @@ Nota:
 No utilices funciones preexistentes.
 
 ```Python
-def positivo (valor):
-    if valor < 0:
-        return -valor
+def positibo (balioa):
+    if balioa < 0:
+        return -balioa
 
-    return valor
+    return balioa
 ```
 
 ```Python
-def potencia (balio1, balio2):
-    return balio1 \*\* balio2
+def berredura (balioa1, balioa2):
+    return balioa1 ** balioa2
 
-print(positivo(-1))
-print(potencia(2, 3))
-print(potencia(positivo(2), positivo(4)))
-potencia(positivo(-5), positivo(4))
+print(positibo(-1))
+print(berredura(2, 3))
+print(berredura(positibo(2), positibo(4)))
+berredura(positibo(-5), positibo(4))
 ```
 
 Resultado:
@@ -384,12 +382,12 @@ Los programas tratan de resolver problemas ofreciendo una solución. En ocasione
 Si tu programa tiene que hacer alguna cosa varias veces, tendrías que repetir el código tantas veces como fuera necesario. Imagina que tienes que recibir varios datos del usuario, y que cada vez que lo haces tienes que comprobar que el dato no está vacío:
 
 ```Python
-dato = ""
+datua = ""
 
-while dato == "":
-    dato = input("Por favor, introduce un dato: ")
-    if dato == "":
-        print("¡El dato está vacío!)
+while datua == "":
+    datua = input("Mesedez,sartu datu bat: ")
+    if datua == "":
+        print("Datua hutsik dago!)
 ```
 
 Si solicitas al usuario 3 datos, ¡tendrías que repetir ese código 3 veces! En cambio si creas una función con ese mismo código, solo lo tendrás que escribir una vez y luego podrás usarlo tantas veces como necesites.
@@ -403,24 +401,24 @@ NO repetir el código es una de las reglas más importantes que debe seguir todo
 Además de no repetir el código, una función nos permite que un mismo código sirva para distintos tipos de datos. ¡Para eso se utilizan los parámetros!
 
 ```Python
-def saludar(saludo, veces):
-    for i in range(veces):
-        print(saludo)
+def agurtu(agurra, zenbat):
+    for i in range(zenbat):
+        print(agurra)
 ```
 
 Se le puede llamar con distintos valores:
 
 ```Python
-saludar("Holi", 3)
-saludar("Aupa", 1)
+agurtu("Kaixo", 3)
+agurtu("Aupa", 1)
 ```
 
 Sería:
 
 ```console
-Holi
-Holi
-Holi
+Kaixo
+Kaixo
+Kaixo
 Aupa
 ```
 
@@ -453,25 +451,25 @@ Cualquiera puede escribir funciones y agrupar el código en pequeñas partes. Pe
 Escribe una función que reciba dos números, detecte cuál es más grande y muestre la diferencia entre ellos.
 
 ```Python
-def diferencia (balio1, balio2):
-    diferencia = 0
+def diferentzia (balio1, balio2):
+    kenketa = 0
 
-    if balio1 > balio2:
-        diferencia = balio1 - balio2
-    else:
-        diferencia = balio2 - balio1
+    if balio1 > balio2:
+        kenketa = balio1 - balio2
+    else:
+        kenketa = balio2 - balio1
 
-    print("La diferencia es: ", diferencia)
+    print("Diferentzia da: ", kenketa)
 
-diferencia(10, 5)
-diferencia(4, 12)
+diferentzia(10, 5)
+diferentzia(4, 12)
 ```
 
 Resultado:
 
 ```console
-La diferencia es: 5
-La diferencia es: 8
+Diferentzia da: 5
+Diferentzia da: 8
 ```
 
 ### 12.7.2 Ejercicio 4.1
@@ -479,21 +477,21 @@ La diferencia es: 8
 Escribe un programa que reciba dos números y un signo de operación aritmética: +, -, *, /. La función debe retornar el resultado de esa operación entre los dos números.
 
 ```Python
-def calcular (balio1, balio2, op):
-    if op ==  "+": return balio1 + balio2
-    elif op == "-": return balio1 - balio2
-    elif op == "*": return balio1 * balio2
-    elif op == "/": return balio1 / balio2
-    else: return "Operación desconocida"
+def kalkulatu (balioa1, balioa2, eragiketa):
+    if eragiketa ==  "+": return balioa1 + balioa2
+    elif eragiketa == "-": return balioa1 - balioa2
+    elif eragiketa == "*": return balioa1 * balioa2
+    elif eragiketa == "/": return balioa1 / balioa2
+    else: return "Eragiketa ezezaguna"
 
-resultado = calcular(4, 6, "*")
-print(resultado)
+emaitza = kalkulatu(4, 6, "*")
+print(emaitza)
 
-resultado = calcular(5, 5, "-")
-print(resultado)
+emaitza = kalkulatu(5, 5, "-")
+print(emaitza)
 
-resultado = calcular(4, 3, "@")
-print(resultado)
+emaitza = kalkulatu(4, 3, "@")
+print(emaitza)
 ```
 
 Resultado:
@@ -501,7 +499,7 @@ Resultado:
 ```console
 24
 0
-Operación desconocida
+Eragiketa ezezaguna
 ```
 
 ### 12.7.3 Ejercicio 4.2
@@ -511,48 +509,52 @@ Operación desconocida
 Esta función recibe como parámetro un momento del día: "mañana", "tarde" o "noche" y debe devolver el correspondiente saludo: "Buenos días", "Buenas tardes", y "Buenas noches" respectivamente.
 
 ```Python
-def saludo (momento):
-    if  momento == "mañana": return "Buenos días"
-    elif momento == "tarde": return "Buenas tardes"
-    elif momento == "noche": return "Buenas noches"
-    else: return ""
+def agurtu(momentua):
+    if momentua == "goizean":
+        return "Egun on"
+    elif momentua == "arratsaldean":
+        return "Arratsaldeon ondo"
+    elif momentua == "gauero":
+        return "Gabon on"
+    else:
+        return ""
 
-print(saludo("tarde"))
+print(eskerrik_asko("arratsaldean"))
+# beste bertsio bat
+def agurtu2(momentua):
+    return {
+        "goizean": "Egun on",
+        "arratsaldean": "Arratsalde ondo",
+        "gauero": "Gabon on"
+    }[momentua]
 
-def saludo2 (momento):
-    return {
-        "mañana": "Buenos Días",
-        "tarde": "Buenas tardes",
-        "noche":"Buenas noches"
-    }[momento]
-
-print(saludo2("tarde"))
+print(eskerrik_asko2("arratsaldean"))
 ```
 
 Resultado:
 
 ```console
-Buenas tardes
-Buenas tardes
+Arratsalde on
+Arratsalde on
 ```
 
 ### 12.7.4 Ejercicio 4.3
 
-`def iniciarConNumero (numeros, numero)`
+`def hasieratuZenbakiarekin (numeros, numero)`
 
 Esta función debe iniciar todos los elementos del array números con el número que pasamos como parámetro.
 
 ```Python
-def iniciarConNumero (longitud, numero):
-    numeros = []
-    for i in range(longitud):
-        numeros.append(numero)
-    return numeros
+def hasieratuZenbakiarekin(luzera, zenbakia):
+    zenbakiak = []
+    for i in range(luzera):
+        zenbakiak.append(zenbakia)
+    return zenbakiak
 
-def iniciarConNumero1 (longitud, numero): return [numero] * longitud
+def hasieratuZenbakiarekin2(luzera, zenbakia): return [zenbakia] * luzera
 
-print(iniciarConNumero(10, 3))
-print(iniciarConNumero1(10, 3))
+print(hasieratuZenbakiarekin(10, 3))
+print(hasieratuZenbakiarekin(10, 3))
 ```
 
 Resultado:
@@ -571,10 +573,10 @@ Esta función debe devolver un número aleatorio entre 0 y el valor máximo que 
 ```Python
 import random
 
-def aleatorio (max):
-    return random.randint(0, max)
+def ausazkoa (max):
+    return random.randint(0, max)
 
-print(aleatorio(5))
+print(ausazkoa(5))
 ```
 
 Resultado:
@@ -592,24 +594,22 @@ Una función que dado un número de sílabas genere un nombre (alternar consonan
 ```Python
 import random
 
-def aleatorio (max):
-    return random.randint(0, max - 1)
+def ausazkoa(max):
+    return random.randint(0, max - 1)
 
+def izenaSortu(silabak):
+    oinak = ["a", "e", "i", "o", "u"]
+    konsonanteak = ["b","c","d","f","g","h","j","k","l","m","n","ñ","p","q","r","s","t","v","w","x","y","z"]
+    izena = ""
 
-def generarNombre (silabas):
-    vocales = ["a", "e", "i", "o", "u"]
-    consonantes = ["b","c","d","f","g","h","j","k","l","m","n","ñ","p","q","r","s","t","v","w","x","y","z"]
-    nombre = ""
+    for i in range(silabak):
+        konsonantea = konsonanteak[ausazkoa(len(konsonanteak))]
+        oina = oinak[ausazkoa(len(oinak))]
+        izena = izena + konsonantea + oina
 
-    for i in range(silabas):
-        consonante = consonantes[aleatorio(len(consonantes))]
-        vocal = vocales[aleatorio(len(vocales))]
-        nombre = nombre + consonante + vocal
+    return izena
 
-    return nombre
-
-
-print(generarNombre(3))
+print(izenaSortu(3))
 ```
 
 Resultado:
@@ -627,23 +627,23 @@ Una función que dada una longitud genere una cadena o string con caracteres ale
 ```Python
 import random
 
-def aleatorio (max):
-    return random.randint(0, max - 1)
+def ausazkoa (max):
+    return random.randint(0, max - 1)
 
-def generarPassword (longitud):
-    caracteres = ["a","b","c","d","e","f","g","h","i","j","k","l",
-        "m","n","ñ","o","p","q","r","s","t","u","v","w","x","y","z",
-        "0","1","2","3","4","5","6","7","8","9",".","-","_","!","$"]
-    password = ""
+def pasahitzaSortu (luzera):
+    hizkiak = ["a","b","c","d","e","f","g","h","i","j","k","l",
+        "m","n","ñ","o","p","q","r","s","t","u","v","w","x","y","z",
+        "0","1","2","3","4","5","6","7","8","9",".","-","_","!","$"]
+    pasahitza = ""
 
-    for i in range(longitud):
-        caracter = caracteres[aleatorio(len(caracteres))]
-        password = password + caracter
+    for i in range(luzera):
+        hizkia = hizkiak[aleatorio(len(hizkiak))]
+        pasahitza = pasahitza + hizkia
 
-    return password
+    return pasahitza
 
 
-print(generarPassword(8))
+print(pasahitzaSortu(8))
 ```
 
 Resultado:
@@ -665,26 +665,26 @@ Crea una función llamada `factura(productos, cantidades, precios)` que recibe t
 La función debe recorrer cada producto y calcular el precio total según su cantidad y precio. Se debe mostrar ese precio total de cada producto y al final del programa, se debe mostrar el precio total.
 
 ```Python
-def factura(productos, cantidades, precios):
-    factura = "FACTURAn-------------------n"
-    total = 0
+def faktura(produktuak, kantitateak, prezioak):
+    faktura = "FAKTURA\n-------------------\n"
+    totala = 0
 
-    for i in range(len(productos)):
-        factura = factura + productos[i]
-        factura = factura + " x " + str(cantidades[i])
-        factura = factura + " : " + str(precios[i]) + "n"
+    for i in range(len(produktuak)):
+        faktura = faktura + produktuak[i]
+        faktura = faktura + " x " + str(kantitateak[i])
+        faktura = faktura + " : " + str(prezioak[i]) + "\n"
 
-        total = total + (cantidades[i] * precios[i])
+        totala = totala + (kantitateak[i] * prezioak[i])
 
-    factura = factura + "n-----------------------n"
-    factura = factura + "Total: " + str(total)
+    faktura = faktura + "\n-----------------------\n"
+    faktura = faktura + "Totala: " + str(totala)
 
-    return factura
+    return faktura
 
 
-# Ejemplo de llamada
-totalFactura = factura(["Pan","Huevos","Harina"],[1,6,2],[1.2, 0.2, 0.8])
-print(totalFactura)
+# Deituriko adibidea
+totalFaktura = faktura(["Ogi","Arrautza","Hirina"],[1,6,2],[1.2, 0.2, 0.8])
+print(totalFaktura)
 ```
 
 Resultado:
@@ -713,49 +713,49 @@ Al final el programa debe mostrar un resumen de los puntos asignados.
 ```Python
 import random
 
-def aleatorio (max):
-    return random.randint(0, max)
+def ausazkoa (maximoa):
+    return random.randint(0, maximoa)
 
-def generarAtributos (nivelCompensacion):
-    darPuntosA = 0
-    inteligencia = 0
-    fuerza = 0
-    velocidad = 0
+def atributuakSortu(konpentsaketaMaila):
+    puntuakEman = 0
+    adimena = 0
+    indarra = 0
+    abiadura = 0
 
-    puntosRestantes = 20
-    puntos = 0
+    gainontzekoPuntuak = 20
+    puntuak = 0
 
-    while puntosRestantes > 0:
-        if nivelCompensacion > puntosRestantes:
-            puntos = puntosRestantes
-            puntosRestantes = 0
-        else:
-            puntos = aleatorio(nivelCompensacion+1)
-            puntosRestantes = puntosRestantes - puntos
+    while gainontzekoPuntuak > 0:
+        if nivel_compensación > gainontzekoPuntuak:
+            puntuak = gainontzekoPuntuak
+            gainontzekoPuntuak = 0
+        else:
+            puntuak = aleatorio(konpentsaketaMaila+1)
+            gainontzekoPuntuak = gainontzekoPuntuak - puntuak
 
-        darPuntosA = aleatorio(3)
+        puntuakEman = aleatorio(3)
 
-        if darPuntosA == 0:
-            inteligencia = inteligencia + puntos
-        elif darPuntosA == 1:
-            fuerza = fuerza + puntos
-        elif darPuntosA == 2:
-            velocidad = velocidad + puntos
+        if puntuakEman == 0:
+            adimena = adimena + puntuak
+        elif puntuakEman == 1:
+            indarra = indarra + puntuak
+        elif puntuakEman == 2:
+            abiadura = abiadura + puntuak
 
-    print("nValores asignados por compensación: ", nivelCompensacion)
-    print("Inteligencia: ", inteligencia)
-    print("Fuerza: ", fuerza)
-    print("Velocidad: ", velocidad)
+    print("\nBalioak konpentsazioaren arabera adierazita: ", konpentsaketaMaila)
+    print("Adimena: ", adimena)
+    print("Indarra: ", indarra)
+    print("Azkarera: ", abiadura)
 
 
-generarAtributos(3)
+atributuakSortu(3)
 ```
 
 Resultado:
 
 ```console
 Valores asignados por compensación:  3
-Inteligencia:  3
-Fuerza:  1
-Velocidad:  10
+Adimena:  3
+Indarra:  1
+Abiadura:  10
 ```
