--- a/md/14.md
+++ b/md/14.md
@@ -11,10 +11,10 @@ A estas alturas puede que ya seas excelente en programación. Pero aún así, tu
 Por ejemplo, supongamos que tenemos un programa muy simple como el siguiente, en el que se le pide un número al usuario y se hace una multiplicación:
 
 ```Python
-valor = input("Sartu zenbaki bat:")
-valor = int(valor)
-cuadrado = valor  * valor
-print("El cuadrado es: ", cuadrado)
+balioa = input("Sartu zenbaki bat:")
+balioa = int(balioa)
+karratua = balioa  * balioa
+print("Karratua da: ", karratua)
 ```
 
 Si el usuario introduce lo que no debe, veremos lo siguiente:
@@ -22,8 +22,8 @@ Si el usuario introduce lo que no debe, veremos lo siguiente:
 ```Python
 Sartu zenbaki bat:x
 Traceback (most recent call last):
-  File "saltaexcepcion.py", line 2, in <module>
-    valor = int(valor)
+  File "salbuespena.py", line 2, in <module>
+    balioa = int(balioa)
 ValueError: invalid literal for int() with base 10: 'x'
 ```
 
@@ -31,29 +31,29 @@ Mediante una excepción, podemos evitar que el programa falle estrepitosamente y
 
 ```Python
 try:
-    código _que _puede _fallar
+    huts_egin_dezakeen_kodea
 except:
-    código _que _se _ejecuta _si _hay _error
+    eragiketak_hutsa_gertatzen_denean
 ```
 
 Veamos el ejemplo anterior, protegiendo el código sensible dentro del bloque de excepción:
 
 ```Python
-valor = input("Sartu zenbaki bat:")
+balioa = input("Sartu zenbaki bat:")
 
 try:
-    valor = int(valor)
-    cuadrado = valor  * valor
-    print("El cuadrado es: ", cuadrado)
+    balioa = int(balioa)
+    karratua = balioa  * balioa
+    print("Karratua da: ", karratua)
 except:
-    print("Error al convertir dato!")
+    print("Errorea datua biurtzerakoan!")
 ```
 
 Ahora si se mete un dato incorrecto, veremos lo siguiente:
 
 ```console
 Sartu zenbaki bat:x
-Error al convertir dato!
+Errorea datua biurtzerakoan!
 ```
 
 También se podría mejorar el programa para que volviera a intentar solicitar el valor y no terminar.
