--- a/md/15.md
+++ b/md/15.md
@@ -11,10 +11,10 @@ Hasta ahora hemos manejado pocos datos, lo que el usuario escribe por pantalla o
 Para poder leer un fichero, necesitamos por un lado que exista ese fichero, luego ya lo podemos abrir y leer. En el siguiente código, se lee un fichero que está en el mismo sitio que el propio programa:
 
 ```Python
-fichero = open("texto.txt", "r")
-contenido = fichero.read()
-print(contenido)
-fichero.close()
+fitxategia = open("testua.txt", "r")
+edukia = fitxategia.read()
+print(edukia)
+fitxategia.close()
 ```
 
 A tener en cuenta:
@@ -26,10 +26,10 @@ A tener en cuenta:
  - El parámetro "r" indica que el fichero lo leemos solo en modo lectura o read. El fichero de texto podría ser algo así, y el programa mostraría eso mismo por pantalla.
 
 ```console
-Este es un texto
-de varias líneas
-Y se puede leer
-muy fácilmente
+Hau testu bat da
+lerro askotakoa
+eta oso errez
+irakur daiteke
 ```
 
 ### 15.1.1 ¿Leyendo línea a línea?
@@ -37,12 +37,12 @@ muy fácilmente
 En el ejemplo anterior, hemos leído todo el contenido del fichero de golpe, guardándolo en una variable de texto. Pero a veces, puede que nos interese leer el fichero línea a línea. Para ello debemos utilizar la función readline como se ve a continuación:
 
 ```Python
-fichero = open("texto.txt", "r")
-lineas = fichero.readline()
-for linea in lineas:
-    print(linea)
+fitxategia = open("testua.txt", "r")
+lerroak = fitxategia.readline()
+for lerroa in lerroak:
+    print(lerroa)
 
-fichero.close()
+fitxategia.close()
 ```
 
 15.2 Ficheros JSON
@@ -52,9 +52,9 @@ Los ficheros de texto simples como el anterior pueden contener información, per
 
 ```Python
  [
-    {"id": 66, "nombre": "Ada"},
-    {"id": 2, "nombre": "Neko"},
-    {"id": 4, "nombre" : "Bug"}
+    {"id": 66, "izena": "Ada"},
+    {"id": 2, "izena": "Neko"},
+    {"id": 4, "izena" : "Bug"}
  ]
 ```
 
@@ -65,13 +65,13 @@ Para poder leer ese contenido y convertir esos datos en una lista de diccionario
 ```Python
 import json
 
-fichero = open("texto.json", "r")
-contenido = json.load(fichero)
+fitxategia = open("testua.json", "r")
+edukia = json.load(fitxategia)
 
-for personaje in contenido:
-    print(personaje ["nombre" ])
+for pertsona in edukia:
+    print(pertsona ["nombre" ])
 
-fichero.close()
+fitxategia.close()
 ```
 
 Por pantalla veríamos:
@@ -94,10 +94,10 @@ Para escribir ficheros, el proceso es similar pero debemos hacer dos cosas:
 Con el siguiente código, escribiremos un par de líneas de texto en el fichero:
 
 ```Python
-fichero = open("texto.txt", "w")
-fichero.write("Escribo una línea  n")
-fichero.write("Escribo otra línea  n")
-fichero.close()
+fitxategia = open("testua.txt", "w")
+fitxategia.write("Lerro bat idatzi\n")
+fitxategia.write("Beste lerro bat idatzi\n")
+fitxategia.close()
 ```
 
 
@@ -106,27 +106,27 @@ fichero.close()
 Si escribimos de esa manera, estaremos machacando el contenido del fichero. Contenido del fichero:
 
 ```console
-Escribo una línea
-Escribo otra línea
+Lerro bat idatzi
+Beste lerro bat idatzi
 ```
 
 
 Si queremos escribir añadiendo contenido, debemos abrir el fichero en modo "a":
 
 ```Python
-fichero = open("texto.txt", "a")
-fichero.write("Añado una línean")
-fichero.write("Añado otra línean")
-fichero.close()
+fitxategia = open("testua.txt", "a")
+fitxategia.write("Lerro bat gehitu\n")
+fitxategia.write("Beste lerro bat gehitu\n")
+fitxategia.close()
 ```
 
 Ahora el contenido del fichero sería:
 
 ```console
-Escribo una línea
-Escribo otra línea
-Añado una línea
-Añado otra línea
+Lerro bat idatzi
+Beste lerro bat idatzi
+Lerro bat gehitu
+Beste lerro bat gehitu
 ```
 
 15.4 Escribir en un fichero json
@@ -139,14 +139,14 @@ En el siguiente ejemplo, se carga el contenido de un fichero json dentro de una 
 ```Python
 import json
 
-fichero = open("texto.json", "r")
-contenido = json.load(fichero)
-fichero.close()
+fitxategia = open("testua.json", "r")
+edukia = json.load(fitxategia)
+fitxategia.close()
 
-personaje = { "id": 666, "nombre": "Gumball" }
-contenido.append(personaje)
+pertsona = { "id": 666, "izena": "Gumball" }
+contenido.append(pertsona)
 
-fichero = open("texto.json", "w")
-fichero.write(json.dumps(contenido))
-fichero.close()
+fitxategia = open("testua.json", "w")
+fitxategia.write(json.dumps(edukia))
+fitxategia.close()
 ```
