--- a/md/16.md
+++ b/md/16.md
@@ -11,13 +11,13 @@ Una vez organizado el código en ficheros e incluso en carpetas, ya podemos reut
 Definimos la siguiente función en un fichero llamado mates.py:
 
 ```Python
-def sumar (a, b):  -
+def gehitu (a, b):  -
     return a + b
 
-def restar (a, b):
+def kendu (a, b):
     return a - b
 
-def incrementar (a):
+def dekrementatu (a):
     return a - 1
 ```
 
