--- a/md/16.md
+++ b/md/16.md
@@ -11,11 +11,14 @@ Una vez organizado el código en ficheros e incluso en carpetas, ya podemos reut
 Definimos la siguiente función en un fichero llamado mates.py:
 
 ```Python
-def gehitu (a, b):  -
+def batu (a, b):  -
     return a + b
 
 def kendu (a, b):
     return a - b
+
+def inkrementatu (a):
+    return a + 1
 
 def dekrementatu (a):
     return a - 1
@@ -24,13 +27,13 @@ def dekrementatu (a):
 Ahora podemos incluir ese fichero en otro programa mediante la orden import. Si están en el mismo directorio se puede hacer simplemente:
 
 ```Python
-import mates
+import matematikak
 
 balio1 = 5
 balio2 = 10
 
-resultado = mates.sumar(balio1, balio2)
-print(resultado)  # 15
+emaitza = matematikak.batu(balio1, balio2)
+print(emaitza)  # 15
 ```
 
 ### 16.1.1 Ejercicio6.0
@@ -42,30 +45,30 @@ Fichero generar.py:
 ```Python
 import random
 
-def aleatorio (max):
-    return random.randint(0, max - 1)
+def ausazkoa (max):
+    return random.randint(0, max - 1)
 
-def generarPassword (longitud):
-    caracteres = ["a","b","c","d","e","f","g","h","i","j","k","l",
-        "m","n","ñ","o","p","q","r","s","t","u","v","w","x","y","z",
-        "0","1","2","3","4","5","6","7","8","9",".","-","_","!","$"]
-    password = ""
+def pasahitzaSortu (luzera):
+    hizkiak = ["a","b","c","d","e","f","g","h","i","j","k","l",
+        "m","n","ñ","o","p","q","r","s","t","u","v","w","x","y","z",
+        "0","1","2","3","4","5","6","7","8","9",".","-","_","!","$"]
+    pasahitza = ""
 
-    for i in range(longitud):
-        caracter = caracteres[aleatorio(len(caracteres))]
-        password = password + caracter
+    for i in range(luzera):
+        hizkia = hizkiak[ausazkoa(len(hizkiak))]
+        pasahitza = pasahitza + hizkia
 
-    return password
+    return pasahitza
 ```
 
 Y lo usamos en fichero 1.py:
 
 ```Python
-import generar
+import sortu
 
-password = generar.generarPassword(8)
+pasahitza = sortu.pasahitzaSortu(8)
 
-print(password)
+print(pasahitza)
 ```
 
 Resultado:
@@ -77,26 +80,26 @@ g3ep-ahx
 Con las clases se puede hacer exactamente lo mismo. Supongamos que tenemos una clase llamada `LectorPantalla` en un fichero llamado `lector_pantalla.py`. Es una clase que nos permite leer datos desde la consola:
 
 ```Python
-class LectorPantalla:
-    def leerEntero (self, mensaje = "Sartu zenbaki bat:"):
-        numero = input(mensaje)
-        return int(numero)
+class PantailaIrakurri:
+    def zenbakiaIrakurri (self, mezua = "Sartu zenbaki bat:"):
+        zenbakia = input(mezua)
+        return int(zenbakia)
 
-    def leerTexto (self, mensaje = "Introduce texto: ")
-        texto = input(mensaje)
-        return texto
+    def testuaIrakurri (self, mezua = "Testua sartu: ")
+        testua = input(mezua)
+        return testua
 ```
 
 Ahora podemos reutilizar esa clase en otro fichero, junto con nuestro fichero mates.
 
 ```Python
-import lector_pantalla
-import mates
+import pantaila_irakurri
+import matematika
 
-lector = lector_pantalla.LectorPantalla()
-balio1 = lector.leerEntero()
+irakurlea = pantaila_irakurri.PantailaIrakurri()
+balio1 = irakurlea.zenbakiaIrakurri()
 
-print(mates.incrementar(balio1))
+print(matematika.inkrementatu(balio1))
 ```
 
 Por pantalla se podría ver algo así:
@@ -120,38 +123,38 @@ Fichero menu.py:
 
 ```Python
 class Menu:
-    def __init__ (self, opciones):
-        self._opciones = opciones
+    def __init__ (self, aukerak):
+        self._aukerak = aukerak
 
-    def mostrar (self):
-        for i in range(len(self._opciones)):
-            print(f"{i+1} {self._opciones[i]}")
+    def erakutsi (self):
+        for i in range(len(self._aukerak)):
+            print(f"{i+1} {self._aukerak[i]}")
 
-    def seleccionar (self, numero):
-        return numero > 0 and numero <= len(self._opciones)
+    def hautatu (self, zenbakia):
+        return zenbakia > 0 and zenbakia <= len(self._aukerak)
 ```
 
 Fichero 2.py:
 
 ```Python
 import menu
-miMenu = menu.Menu(["Mostrar", "Eliminar", "Salir"])
+nireMenua = menua.Menu(["Erakutsi", "Kendu", "Irten"])
 
-miMenu.mostrar()
+nireMenua.erakutsi()
 
-if miMenu.seleccionar(1):
-    print("Opción 1 presente")
+if nireMenua.aukeratu(1):
+    print("1. aukera badado menuan")
 else:
-    print("Opción 1 no presente")
+    print("1. aukera ez dago menu honetan")
 ```
 
 Resultado:
 
 ```console
-1 Mostrar
-2 Eliminar
-3 Salir
-Opción 1 presente
+1 Erakutsi
+2 Kendu
+3 Irten
+1. aukera badado menuan
 ```
 
 16.2 Ejercicios propuestos
