--- a/md/17.md
+++ b/md/17.md
@@ -48,18 +48,18 @@ Los test unitarios son programas que comprueban que las funciones están bien he
 Supongamos que tenemos la siguiente clase que representa una calculadora:
 
 ```Python
-class Calculadora:
-    def sumar (self, a, b):
-        return a + b
-   
-    def restar (self, a, b):
-        return a - b
-   
-    def multiplicar (self, a, b):
-        return a * b
-   
-    def dividir (self, a, b):
-        return a / b
+class Kalkulagailua:
+    def batura (self, a, b):
+        return a + b
+    
+    def kendu (self, a, b):
+        return a - b
+    
+    def biderkatu (self, a, b):
+        return a * b
+    
+    def zatitu (self, a, b):
+        return a / b
 ```
 
 Para hacer los test unitarios de esa clase, bastaría con crear esta otra clase, la cual hereda de una clase de testeo de la librería unittest. También tenemos que importar la propia clase calculadora ya que la tenemos que poner a prueba.
@@ -67,42 +67,42 @@ Para hacer los test unitarios de esa clase, bastaría con crear esta otra clase,
 Cada función de la clase hace una comprobación de cada función de calculadora. Se pueden hacer tantos tests como creas conveniente para probar que las funciones hacen lo que deben. Como puedes ver, cada test básicamente ejecuta una función y comprueba que el resultado es el esperado con assertEqual:
 
 ```Python
-    def test_sumar(self):
-        c = calculadora.Calculadora()
-        self.assertEqual(c.sumar(40, 2), 42)
+    def test_batura(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(kal.batura(40, 2), 42)
 ```
 
 Fichero calculadora.test.py:
 
 ```Python
 import unittest
-import calculadora
+import kalkulagailua
 
 class TestStringMethods(unittest.TestCase):
-    def test_sumar(self):
-        c = calculadora.Calculadora()
-        self.assertEqual(c.sumar(40, 2), 42)
+    def test_batura(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(kal.batura(40, 2), 42)
 
-    def test_restar(self):
-        c = calculadora.Calculadora()
-        self.assertEqual(c.restar(40, 2), 38)
+    def test_restar(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(kal.kendu(40, 2), 38)
 
-    def test_multiplicar(self):
-        c = calculadora.Calculadora()
-        self.assertEqual(c.multiplicar(40, 2), 80)
+    def test_multiplicar(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(c.biderkatu(40, 2), 80)
 
-    def test_dividir(self):
-        c = calculadora.Calculadora()
-        self.assertEqual(c.dividir(40, 2), 20)
+    def test_dividir(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(c.zatitu(40, 2), 20)
 
 if __name__ == '__main__':
-    unittest.main()
+    unittest.main()
 ```
 
 Ahora basta con ejecutar el fichero de tests y veremos lo siguiente:
 
 ```console
-python3 calculadora.test.py
+python3 kalkulagailua.test.py
 
 ....
 ----------------------------------------------------------------------
@@ -133,26 +133,26 @@ Collecting distlib<1,>=0.3.1
 Con virtualenv ya podemos crear un nuevo proyecto:
 
 ```console
-virtualenv proyecto
+virtualenv proiektua
 ```
 
 Lo cual creará una carpeta llamada proyecto. A continuación debemos activar el entorno virtual del proyecto ejecutando:
 
 ```console
-source proyecto/bin/activate
+source proiektua/bin/activate
 ```
 
 Ahora ya podemos añadir código fuente o instalar dependencias. Para ello conviene crear un fichero de texto llamado requirements.txt que debe tener el siguiente formato:
 
 ```console
-# Para instalar una versión concreta 
-# nombre_paquete==version
+# Bertsio zehatz bat instalatzeko
+# liburutegi_izena==bertsioa
 
-# Para instalar una versión igual o superior
-# nombre_paquete>=version
+# Bertsio berdina ala berriago instalatzeko
+# liburutegi_izena>=bertsioa
 
-# Para instalar la versión más reciente
-# nombre_paquete
+# Azkeneko bertsioa instalatzeko
+# liburutegi_izena
 ```
 
 Por ejemplo, si queremos instalar pygame y un paquete de testing podríamos poner:
@@ -230,7 +230,7 @@ pygame.quit()
 Ejecutaríamos el juego así:
 
 ```console
-python3 game.py
+python3 jokua.py
 ```
 
 Y para terminar el entorno virtual de Python, bastaría con hacer:
